feat(memory-commands): implement and test MEMSAVE, MEMQUERY, MEMDEL, and MEMSTATUS commands
- Add command handlers for MEMSAVE, MEMQUERY, MEMDEL, and MEMSTATUS with full E2E functionality.
- Integrate async indexing pipeline in `VectorEngine` (chunker → embedder → HNSW).
- Refactor `Embedder` to support injection and configurable threading via `ServerConfig`.
- Introduce `VectorModelIntegrationTest` for validating the full pipeline with live ONNX models.
- Add `MemCommandsTest` for command-level integration tests via RESP server.
- Update documentation and mark custom commands as complete in `tasks.md`.
- Fix minor issues in `IncrCommand` and `InfoCommand`.